# wrec

./: .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md  SECURITY.md  package.json  vercel.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  VOUCHED.td
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  vouch-check-pr.yml  vouch-manage-by-issue.yml
apps/mac/: Package.swift
benchmarks/: README.md  package.json
benchmarks/native/: decode.swift  stimulus.swift
benchmarks/results/: 2026-07-22T07-59-01-155Z-8c49193.json
benchmarks/src/: benchmark-values.test.ts  benchmark-values.ts  gates.ts  release-check.ts  report.ts  run.ts  summary.ts  verify-release.test.ts  verify-release.ts
crates/app/: Cargo.toml
crates/app/assets/skill/: SKILL.md
crates/app/src/: app.rs  assets.rs  config.rs  main.rs  platform.rs  updater.rs
crates/app/src/ui/: mod.rs
crates/app/src/ui/kit/: button.rs  select.rs  tokens.rs
crates/backend/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  run.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/control/: Cargo.toml
crates/control/src/: client.rs  lib.rs  paths.rs  protocol.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: backend.rs  coordinator.rs  jobs.rs  lib.rs  paths.rs  runtime.rs  server.rs  store.rs  target_resolution.rs  test_support.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/macos/: Cargo.toml
crates/macos/native/: capture_engine.swift  wrec_helper.swift
crates/macos/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/wrec-app/: Cargo.toml
crates/wrec-app/src/: app.rs  assets.rs  config.rs
crates/wrec-core/src/: lib.rs
crates/wrec-macos/: Cargo.toml  build.rs
crates/wrec-macos/native/: wrec_helper.swift
crates/wrec-macos/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: README.md  astro.config.mjs  package.json  vercel.json
docs/public/: robots.txt  sitemap.xml
docs/src/components/: Seo.astro  Topbar.astro
docs/src/layouts/: BenchLayout.astro  DocsLayout.astro
docs/src/lib/: bench.ts
docs/src/pages/: index.astro
docs/src/styles/: global.css
marketing/: README.md  astro.config.mjs  package.json
marketing/src/components/: CodeBlock.astro  HeadFonts.astro
marketing/src/layouts/: DocsLayout.astro
marketing/src/pages/: docs.astro  index.astro  install.ts  (+1 more)
packaging/homebrew/: README.md
packaging/macos/: Info.plist  README.md
promo/docs-release/: .gitignore  .prettierignore  README.md  package.json
scripts/: install-app.sh  install-cli.sh  package-cli-macos.sh  package-macos.sh  preview-app-update.sh  uiclick.swift  update-homebrew.sh
(+34 files in other folders)
