[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "wrec-app"
path = "src/main.rs"

[dependencies]
control = { path = "../control" }
domain = { path = "../domain" }
config = { path = "../config" }
macos = { path = "../macos" }
anyhow.workspace = true
tracing.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
phosphor-svgs = "0.3.0"
futures = "0.3.32"
serde_json = "1.0.150"
