[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
domain = { path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
