[package]
name = "wrec-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wrec-backend = { path = "../backend" }
wrec-core = { path = "../core" }
wrec-macos = { path = "../macos" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
