[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
control = { path = "../control" }
config = { path = "../config" }
domain = { path = "../domain" }
macos = { path = "../macos" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "daemon"
path = "src/main.rs"
